# gnmi-mcp-server

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  gnmi-mcp.example.yaml  go.mod  go.sum  install.sh  main.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
internal/config/: config.go  config_test.go
internal/gnmi/: client.go  client_test.go
internal/install/: install.go  install_test.go
internal/selfupdate/: selfupdate.go  selfupdate_test.go
internal/server/: server.go  server_test.go
internal/session/: manager.go  manager_test.go
internal/tools/: capabilities.go  common.go  common_test.go  get.go  get_test.go  path.go  prompts.go  session.go  set.go  set_test.go  subscribe.go  subscribe_test.go  targets.go  targets_test.go
src/gnmi_mcp_server/: server.py
src/gnmi_mcp_server/lib/: config.py  gnmic.py  installer.py  session.py
src/gnmi_mcp_server/tools/: _common.py  capabilities.py  get.py  path.py  session_list.py  session_stop.py  session_tail.py  set.py  subscribe.py
tests/: test_config.py  test_gnmic.py  test_installer.py  test_session.py  test_tools_common.py  test_tools_set.py
