[project]
name = "gnmi-mcp-server"
version = "0.1.0"
description = "MCP server for gNMI network device management via gnmic CLI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gnmi-mcp-server = "gnmi_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
